crates/language-v2/tests/src/fail/p2_specifiers/evm_target_redundant_range_from/test.stderr
error: 'Range' starting from the first supported EVM target 'Frontier' can be simplified to 'Till'.
  --> src/fail/p2_specifiers/evm_target_redundant_range_from/test.rs:25:91
   |
25 |             definitions = [BuiltInDefinition(name = MyBuiltIn, evm_enabled = Range(from = Frontier, till = Cancun))]
   |                                                                                           ^^^^^^^^
